applications/cve/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cve-srv-service
spec:
  ports:
    - name: srv
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: cve-backend-info
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: cveservice
  namespace: cve
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: httpport
      nodePort: 31116
      port: 80
      protocol: TCP
      targetPort: 80
    - name: httpsport
      nodePort: 31117
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: cveinfo
  type: ClusterIP
